<resources>
    <string name="app_name">Assistance</string>
    <string name="action_settings">Settings</string>
    <string name="hint_enter_password">Lozinka</string>
    <string name="hint_enter_membership_card_number">Članski broj</string>
    <string name="label_or">ili</string>
    <string name="label_new_password">Zatraži novu lozinku</string>
    <string name="label_login">Prijavi se</string>
    <string name="label_enter_login_data">Prijavi se</string>
    <string name="msg_unexpected_error">Došlo je do neočekivane greške</string>
    <string name="please_wait">Molimo pričekajte</string>
    <string name="error_field_is_required">Ovo polje je obavezno</string>
    <string name="error_please_fill_in_form">Popunite obavezna polja</string>
    <string name="warning_log_out_session_expired">Vaša sesija je istekla</string>
    <string name="title_activity_home">Home</string>
    <string name="label_forgot_password">Zaboravili ste lozinku?</string>
    <string name="label_password_reset_enter_username">Upišite vaše korisničko ime i aktivacijski kod poslat će se na mail.</string>
    <string name="label_send_code">Pošalji kod</string>
    <string name="hint_enter_new_password">Nova lozinka</string>
    <string name="hint_enter_password_reset_token">Tajni kod</string>
    <string name="label_request_new_token_code">Pošalji novi kod?</string>
    <string name="label_submit">Potvrdi</string>
    <string name="msg_code_resend_successfull">Kod je uspješno poslan</string>
    <string name="msg_please_wait_for_code_resend">Molimo pričekajte par minuta</string>
    <string name="error_field_username_invalid">Unesite ispravno korisničko ime</string>
    <string name="error_field_password_invalid">Minimalno 6 karaktera uključujući velika i mala slova, brojeve i specijalni karakter(!@#$%)</string>
    <string name="error_field_token_invalid">Unesite ispravan token</string>
    <string name="label_i_have_code">Posjedujem kod</string>
    <string name="nav_label_home_screen">Naslovna</string>
    <string name="nav_label_profile_screen">Profil</string>
    <string name="nav_label_services">Servisi</string>
    <string name="nav_label_settings">Postavke</string>
    <string name="label_logout">Odjavi se</string>
    <string name="OK">Uredu</string>
    <string name="Cancel">Odustani</string>
    <string name="title_logout">Odjava</string>
    <string name="title_logout_message">Ova akcija odjavit će vas s trenutno aktivnog korisničkog računa.</string>
    <string name="label_account_valid_until">Istek police</string>
    <string name="label_phone_number_contact">Telefonski broj</string>
    <string name="label_emergency_number">Telefon za hitne slučaje</string>
    <string name="label_health_problems">Zdravstveni problemi </string>
    <string name="not_entered"> Nije uneseno</string>
    <string name="label_account_into">Korisnički račun</string>
    <string name="label_username">Korisničko ime</string>
    <string name="label_firstname">Ime</string>
    <string name="label_lastname">Prezime</string>
    <string name="label_email">Email</string>
    <string name="lbl_settings_footer">Assistance za Android %s</string>
    <string name="label_personal_info">Osobne informacije</string>
    <string name="label_sex">Spol</string>
    <string name="label_bloodtype">Krvna grupa</string>
    <string name="label_gender_male">Muško</string>
    <string name="label_gender_female">Žensko</string>
    <string name="zero_blood_type">Nulta</string>
    <string name="a_blood_type">A</string>
    <string name="b_blood_type">B</string>
    <string name="ab_blood_type">AB</string>
    <string name="hint_enter_firstname">Ime</string>
    <string name="hint_enter_lastname">Prezime</string>
    <string name="description_update_enter_firstname">Upišite vaše ime</string>
    <string name="error_field_firstname_invalid">Upišite ispravno ime</string>
    <string name="error_field_lastname_invalid">Upišite ispravno prezime</string>
    <string name="label_update">Promijeni</string>
    <string name="description_update_enter_lastname">Upišite vaše prezime</string>
    <string name="hint_enter_email">Email</string>
    <string name="hint_enter_phone_number">Phone number</string>
    <string name="hint_enter_emergency_phone_number">Broj za nuždu</string>
    <string name="hint_enter_health_problems">Zdravstveni problemi</string>
    <string name="error_field_email_invalid">Upišite ispravan email</string>
    <string name="error_field_phone_invalid">Upišite ispravan telefonski broj</string>
    <string name="error_field_health_problems_invalid">Upišite ispravne vrijednosti</string>
    <string name="label_pick_panic_category">Odaberite kategoriju i besplatno pozovite svoju asistenciju</string>
    <string name="label_panic_modal_help">Pomoć</string>
    <string name="label_panic_model_select_category">Kategorizirajte incident</string>
    <string name="label_panic_modal_accident">Nesreća</string>
    <string name="label_panic_modal_allergies">Alergija</string>
    <string name="label_panic_modal_info">Ostalo</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_services_road_conditions">Stanje na cestama</string>
    <string name="label_services_fuel_prices">Cijene goriva</string>
    <string name="label_services_weather">Vrijeme</string>
    <string name="label_services_toolboth">Cestarine</string>
    <string name="label_services_near_me">U blizini</string>
    <string name="label_services_cameras">Kamere</string>
    <string name="label_road_conditions">Stanje na cestama</string>
    <string name="label_services_road_conditions_traffic_flow">Prohodnost</string>
    <string name="label_services_road_conditions_border_crossing">Granični prijelazi</string>
    <string name="label_services_road_conditions_water_transportation">Pomorski promet</string>
    <string name="label_services_road_conditions_subway_traffic">Željeznički promet</string>
    <string name="label_services_road_conditions_road_works">Radovi na cestama</string>
    <string name="label_services_road_conditions_traffic_forecast">Prometna prognoza</string>
    <string name="err_unable_to_get_location">Lokaciju nije moguće dohvatiti.</string>
    <string name="retry">Ponovi</string>
    <string name="title_activity_road_condition_details">Stanje na cestama</string>
    <string name="label_road_condition_last_update">Ažurirano %s</string>
    <string name="label_usefull_informations">Korisne informacije</string>
    <string name="title_activity_road_conditions">Stanje na cestama</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_data">Nema podataka</string>
    <string name="label_settings">Postavke</string>
    <string name="label_change">Promijeni</string>
    <string name="option_on">Uključeno</string>
    <string name="option_off">Isključeno</string>
    <string name="label_auto_crash_detect">Automatska detekcija nesreće</string>
    <string name="label_gps_permission">Gps dozvola</string>
    <string name="label_notification">Notifikacije</string>
    <string name="title_settings">Postavke</string>
    <string name="updated_at">Ažurirano %s</string>
    <string name="action_refresh">Ažuriraj</string>
    <string name="title_activity_nearest_gas_stations">Benzinske pumpe</string>
    <string name="err_calculating_distances">Greška prilikom računanja udaljenosti.</string>
    <string name="title_activity_gas_stations">Cijene goriva</string>
    <string name="tab_fuel_petrol">Benzin</string>
    <string name="tab_fuel_diesel">Dizel</string>
    <string name="tab_fuel_lpg">Plin</string>
    <string name="tab_fuel_other">Ostalo</string>
    <string name="err_location_permission_needed">Permisije za lokaciju su obavezne.</string>
    <string name="fuel_price_updated_at">na dan %s</string>
    <string name="label_see_more">Vidi više</string>
    <string name="settings">Postavke</string>
    <string name="fuel_petrol_subtitle">Benzin</string>
    <string name="fuel_diesel_subtitle">Dizel</string>
    <string name="fuel_lpg_subtitle">Plin</string>
    <string name="fuel_other_subtitle">Ostalo</string>
    <string name="unable_to_refresh_feed">Nismo uspjeli osvježiti podatke.</string>
    <string name="lbl_navigate_me">Navigiraj me</string>
    <string name="title_activity_highways">HighwaysActivity</string>
    <string name="lbl_tollbooths">Cestarine</string>
    <string name="lbl_select_highway">Odaberite cestu</string>
    <string name="lbl_tollboth_enter">Polazište</string>
    <string name="lbl_tollboth_exit">Destinacija</string>
    <string name="lbl_highway">Autocesta</string>
    <string name="submit">Potvrdi</string>
    <string name="empty_select">---</string>
    <string name="title_activity_highway_select">HighwaySelectActivity</string>
    <string name="please_select_highway">Molimo odaberite autocestu.</string>
    <string name="please_select_tollbooth_entrance">Molimo odaberite polazište.</string>
    <string name="title_select_highways">Odaberite autocestu</string>
    <string name="title_select_entrance">Odaberite polazište</string>
    <string name="title_select_exit">Odaberite odredište</string>
    <string name="please_select_exit">Molimo odaberite odredište.</string>
    <string name="error_while_calculating_tollbooth_prices">Greška prilikom računanja cijene.</string>
    <string name="please_wait_calculating_prices">Izračun u tijeku, molimo pričekajte.</string>
    <string name="label_vehicles_category_I">Kategorija I</string>
    <string name="label_vehicles_category_II">Kategorija II</string>
    <string name="label_vehicles_category_III">Kategorija III</string>
    <string name="label_vehicles_category_IV">Kategorija IV</string>
    <string name="title_activity_highway_prices">Cestarine</string>
    <string name="msg_refresh_highways_failed">Nismo uspjeli osvježiti autoceste.</string>
    <string name="msg_refresh_exits_failed">Nismo uspjeli osvježiti ulaze.</string>
    <string name="msg_refresh_entrance_failed">Nismo uspjeli osvježiti izlaze.</string>
    <string name="no_highway_price_data">Podaci o cijenama ne mogu biti učitani.</string>
    <string name="msg_refresh_highway_prices_failed">Osvježavanje cijena nije uspjelo.</string>
    <string name="crash_detection_channel_name">Detekcija nesreće</string>
    <string name="crash_detection_description">Ovaj notifikacijski kanal koristi se za obavijesti vezane uz detekciju nesreće.</string>
    <string name="crash_detection_foreground_notification_content_title">Pomoć na cesti</string>
    <string name="crash_detection_foreground_notification_content_text">Automatsko prepoznavanje nesreće.</string>
    <string name="label_selected_language">Odabrani jezik</string>
    <string name="option_not_selected">Nije odabrano</string>
    <string name="notification_sensor_error">Greška sa senzorima</string>
    <string name="notification_sensor_error_content">Mobitel ne sadrži sve potrebne senzore</string>
    <string name="notification_summary_have_a_nice_trip">Sretna i ugodna vožnja</string>
    <string name="notification_crash_detection_big_text">Koristeći unutarnje senzore aplikacija će detektovati nesreću i obavijestiti najbližeg operatera.</string>
    <string name="notifications_turn_off">Isključi</string>
    <string name="driving_finished_notification_content_title">Vožnja je završena</string>
    <string name="label_crash_detection">Detekcija nesreće</string>
    <string name="label_my_profile_emergency_contacts_informations">Kontakti za nuždu</string>
    <string name="hint_label_full_name">Ime i prezime</string>
    <string name="hint_label_phone_number">Broj telefona</string>
    <string name="label_register">Registriraj se</string>
    <string name="label_password">Lozinka</string>
</resources>