<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.login.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_username"
            style="?rounded_entry"
            android:hint="@string/hint_enter_membership_card_number"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/ed_password"
            style="?rounded_entry"
            android:hint="@string/hint_enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="?btn_rounded_main_action"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_login" />
        <Button
            android:id="@+id/btn_register"
            style="?btn_transparent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_register" />
        <Button
            android:id="@+id/btn_password_reset"
            style="?btn_transparent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/label_new_password" />



    </LinearLayout>


</android.support.v4.widget.NestedScrollView>