<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:background="?background_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.password_reset.PasswordResetActivity">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_forgot_password"
            android:textColor="?primaryTextColor"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="?secondaryTextColor"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/label_password_reset_enter_username" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?primaryTextColor"
                android:textColorHint="?secondaryTextColor"
                android:hint="@string/hint_enter_membership_card_number"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/hint_enter_new_password"
                android:imeOptions="actionNext"
                android:textColor="?primaryTextColor"
                android:textColorHint="?secondaryTextColor"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_reset_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            tools:visibility="visible"
            android:layout_marginRight="20dp"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_password_reset_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_password_reset_token"
                android:imeOptions="actionDone"
                android:textColorHint="?secondaryTextColor"
                android:textColor="?primaryTextColor"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"
            android:text="@string/label_send_code"
            android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/label_resend_code"
                android:layout_width="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/label_request_new_token_code"
                android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>