<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?background_primary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        style="?text_subtitle"
        android:layout_height="wrap_content"
        android:text="@string/label_my_profile_emergency_contacts_informations"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:id="@+id/til_input_full_name"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:hint="@string/hint_label_full_name"
        app:hintAnimationEnabled="true"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/et_full_name"
            android:inputType="textCapWords"
            tools:text="Petar"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/till_phone_number"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:hint="@string/hint_label_phone_number"
        app:hintAnimationEnabled="true"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/et_phone_number"
            tools:text="+38763103730"
            android:inputType="phone"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>