<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background_primary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.register.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/ed_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_firstname"
                android:textColor="?primaryTextColor"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="?secondaryTextColor"
                tools:text="@string/label_firstname" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_first_name">

            <EditText
                android:id="@+id/ed_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_lastname"
                android:inputType="text"
                android:textColor="?primaryTextColor"
                android:imeOptions="actionNext"
                android:textColorHint="?secondaryTextColor"
                tools:text="@string/label_lastname" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_last_name">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_username"
                android:inputType="text"
                android:textColor="?primaryTextColor"
                android:imeOptions="actionNext"
                android:textColorHint="?secondaryTextColor" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textColor="?primaryTextColor"
                android:textColorHint="?secondaryTextColor"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <EditText
                android:id="@+id/ed_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_phone_number_contact"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:textColor="?primaryTextColor"
                android:textColorHint="?secondaryTextColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_phone_number">

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:textColor="?primaryTextColor"
                android:textColorHint="?secondaryTextColor" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>